# daisy_midi

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
src/instrument/: midi.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
