[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Filip Masiukiewicz <scynthero@gmail.com>"]
name = "daisy-midi"
edition = "2018"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1.1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
# TODO enter your HAL here
daisy_bsp = { version = "0.5.1", features = ["seed"] }
# TODO add a monotonic if you use scheduling
# some-monotonic = "1.2.3"
stm32h7xx-hal = { version = "0.12.2", features = ["stm32h750v","rt","fmc", "xspi", "sdmmc", "sdmmc-fatfs", "usb_hs"] }
# usb midi class device
usb-device = "0.2.9"
usbd-midi = { git = "https://github.com/btrepp/usbd-midi/" }
fugit = "0.3.6"
#num_enum = { version = "0.5.7", default-features = false }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
